<resources>
  <string name="app_name">Chams Access Test</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="username_hint">Username</string>
  <string name="password_hint">Password</string>
  <string name="sign_in_text">Sign In</string>
  <string name="don_t_have_an_account_register"><u>Don\'t have an account? Register</u></string>
  <string name="email_hint">Email</string>
  <string name="i_already_have_an_account"><u>Already have an account?, Login</u></string>
  <string name="register_text">Register</string>
  <string name="first_name_hint">Firstname</string>
  <string name="last_name_hint">Lastname</string>
</resources>
