<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".fragments.LoginFragment">

	<androidx.appcompat.widget.Toolbar
	  android:layout_width="match_parent"
	  app:layout_constraintTop_toTopOf="parent"
	  app:title="Chams Access Test"
	  app:titleTextColor="@android:color/white"
	  android:background="@color/colorPrimaryDark"
	  android:layout_height="?attr/actionBarSize" />

	<Button
	  android:id="@+id/register_button"
	  android:layout_width="0dp"
	  android:layout_height="wrap_content"
	  android:background="@drawable/button_background"
	  android:padding="16dp"
	  android:text="@string/register_text"
	  android:textColor="@android:color/white"
	  app:layout_constraintBottom_toBottomOf="parent"
	  app:layout_constraintEnd_toStartOf="@id/end_guideline"
	  app:layout_constraintStart_toEndOf="@id/start_guideline"
	  app:layout_constraintTop_toBottomOf="@id/password_edit_text" />

	<EditText
	  android:id="@+id/firstname_edit_text"
	  style="@style/AuthEditText"
	  android:layout_marginBottom="16dp"
	  android:hint="@string/first_name_hint"
	  app:layout_constraintBottom_toTopOf="@id/lastname_edit_text"
	  app:layout_constraintEnd_toStartOf="@id/end_guideline"
	  app:layout_constraintStart_toEndOf="@id/start_guideline"
	  app:layout_constraintVertical_chainStyle="packed"
	  app:layout_constraintTop_toTopOf="parent" />

	<EditText
	  android:id="@+id/lastname_edit_text"
	  style="@style/AuthEditText"
	  android:layout_marginBottom="16dp"
	  android:hint="@string/last_name_hint"
	  app:layout_constraintBottom_toTopOf="@id/email_edit_text"
	  app:layout_constraintEnd_toStartOf="@id/end_guideline"
	  app:layout_constraintStart_toEndOf="@id/start_guideline"
	  app:layout_constraintTop_toBottomOf="@id/firstname_edit_text" />


	<EditText
	  android:id="@+id/email_edit_text"
	  style="@style/AuthEditText"
	  android:layout_marginBottom="16dp"
	  android:hint="@string/email_hint"
	  android:inputType="textEmailAddress"
	  app:layout_constraintBottom_toTopOf="@id/password_edit_text"
	  app:layout_constraintEnd_toStartOf="@id/end_guideline"
	  app:layout_constraintStart_toEndOf="@id/start_guideline"
	  app:layout_constraintTop_toBottomOf="@id/lastname_edit_text" />


	<EditText
	  android:id="@+id/password_edit_text"
	  style="@style/AuthEditText"
	  android:layout_marginBottom="16dp"
	  android:hint="@string/password_hint"
	  android:inputType="textPassword"
	  app:layout_constraintBottom_toTopOf="@id/register_button"
	  app:layout_constraintEnd_toStartOf="@id/end_guideline"
	  app:layout_constraintStart_toEndOf="@id/start_guideline"
	  app:layout_constraintTop_toBottomOf="@id/email_edit_text" />

	<TextView
	  android:id="@+id/login_link"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:layout_marginTop="10dp"
	  android:text="@string/i_already_have_an_account"
	  android:textColor="@color/colorPrimary"
	  android:textSize="16sp"
	  app:layout_constraintEnd_toEndOf="parent"
	  app:layout_constraintStart_toStartOf="parent"
	  app:layout_constraintTop_toBottomOf="@id/register_button" />

	<androidx.constraintlayout.widget.Guideline
	  android:id="@+id/start_guideline"
	  android:layout_width="wrap_content"
	  android:layout_height="match_parent"
	  android:orientation="vertical"
	  app:layout_constraintGuide_begin="30dp" />

	<androidx.constraintlayout.widget.Guideline
	  android:id="@+id/end_guideline"
	  android:layout_width="wrap_content"
	  android:layout_height="match_parent"
	  android:orientation="vertical"
	  app:layout_constraintGuide_end="30dp" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>